syntax = "proto3";

package pb;

option go_package = "github.com/jakub/aioportal/server/pb";

message Roll_Up {
  string symbol = 1;
  int32 type = 2;
  double amount = 3;
  double total_cost = 4;
  double total_coins = 5;
  double price_per_coin = 6;
  double profit_loss_percentage = 7;
  double current_value = 8;
}