syntax = "proto3";

package pb;

option go_package = "github.com/jakub/aioportal/server/pb";

message Transaction {
  string id  = 1;
  int64 portfolio_id = 2;
  string symbol = 3;
  int32 type = 4;
  double amount = 5;
  double price_per_coin = 6;
  double quantity = 7;
}